--- a/flanaganthesis.tex
+++ b/flanaganthesis.tex
@@ -201,6 +201,8 @@ However, this type of representation scheme does not incorporation the qualitati
 
 This representation allows an architect to validate a work-in-progress design from a conceptual and qualitative perspective against the physical and precise real world geometrical representation of the design \cite{Bhatt}.
 
+ The crux of this is that it bridges the gap between the quantified geometries and the functional / qualitative requirements of the design, thus allowing the reasoner to validate a high level requirement against its precise geometric representation. 
+
 to do this dspace need to:
  - representation of design
  	- spatial abstraction / multiple perspectives
@@ -231,22 +233,18 @@ In DSpace an architectural design is modeled in a multiple perspective structure
 
 TODO: fig:multiple perspective representation
 
+TODO: talk about representation in CLP framework
+
 This section is structured as follows. The first subsection looks at the multiple perspective design structure of the DSpace reasoner. The second subsection looks at how each perspective is formally modeled (coded) in ins CLP framework of DSpace. The last section looks at how a real world design from a state-of-the-art architectural design tool is imported into the DSpace reasoner from the DsSchema and IFC format.
 
 \subsection{Multiple Perspectives}
-In DSpace designs are represented in a multiple perspective structure that incorporate: (1) the physical geometries that pertain to the quantitative structures of the design (2) the artefactual extension of design that pertain to the functional aspects of the design, (3) and qualitative aspects of the design from a spatial perspective. The multiple perspective representation of DSpace allows reasoning about design requirements that go beyond purely quantitative geometric reasoning.
+In DSpace designs are represented in a multiple perspective structure that incorporate: (1) the physical geometries that pertain to the quantitative structures of the design (2) the artefactual extensions that pertain to the functional aspects of the design, (3) and qualitative aspects of the design from a spatial perspective. The multiple perspective representation of DSpace allows reasoning about design requirements that go beyond purely quantitative geometric reasoning.
 
 \subsubsection{Quantitative Model}
+The quantitative representation models the structural form of the design it terms of its' precise geometric features (i.e., layout, shape, location). It represents architectural entities (i.e., walls, windows, doorways, columns, rooms, etc.) as spatial geometric primitives of polygons, lines and points that correspond to each entities physical dimensions. The quantitative representation is imported directly from the CAAD based model of the design.
 
 \subsubsection{Spatial Artefacts}
-Spatial artefacts are non-physical extensions of architectural entities that pertain to a specific functional quality of the entity in the context of the design. Artefactual extensions do not have a physical manifestation, however, they become an important part of the design process because they effect the functionality and performance of a design. 
-
-There are three types of spatial artefacts identified by Bhatt\cite{Bhatt} that are represented in DSpace:
-\begin{enumerate}
-\item \emph{operational space} 
-\item \emph{functional space} 
-\item \emph{range space} 
-\end{enumerate}
+Spatial artefacts are non-physical extensions of architectural entities that pertain to a specific functional quality of the entity in the context of the design. Artefactual extensions do not have a physical manifestation, however, they become an important part of the design process because they effect the functionality and performance of a design. There are three types of spatial artefacts identified by Bhatt\cite{Bhatt} that are represented in DSpace: \emph{operational space}, \emph{functional space}, and \emph{range space}.
 
 \begin{figure}[H]
  \centering
@@ -259,28 +257,24 @@ There are three types of spatial artefacts identified by Bhatt\cite{Bhatt} that 
 \label{artefactual-extensions}
 \end{figure}
 
-The operational space encompasses the region of space required by an object to preform it's function. For example, the operational space of a door is the area in which a door can occupy during it's operation, opening and closing (see figure \ref{operational-space}). This space is dynamic in the sense that it represents the configurable space the physical doorway can occupy.
-
-the all possible location the physical door can occupy. 
+The operational space encompasses the region of space required by an object to preform it's function. For example, the operational space of a door is the area in which a door can occupy during it's operation, opening and closing (see figure \ref{operational-space}). This space is dynamic in the sense that it represents the configurable space the physical doorway can occupy. 
 
 The functional space encompasses the region of space that is required for the object to function or for a person to operate the object. For example, the functional space of a doorway is the total area needed for a person to operate, open and close, as well as any additional space need to navigate entirely through the doorway (see figure \ref{functional-space}). 
 
 The range space pertains to a region of space that encompass the range of a camera's view or the range of a motion sensor. For example, the range space of a camera is defined by its depth of field and angle of view. It represents the total space that is under surveillance of the camera (see figure \ref{range-space}).
 
-Artefactual extensions directly effect how well a design functions. For example, a sink in a bathroom has a functional space, the space a person occupies while washing his/her hands at the sink. If this space is interfered by (i.e., topologically overlapping) the functional and/or physical space of a doorway, this will cause a circulation problem when both the doorway and sink are simultaneously being operated, i.e., a collision between the person washing his/her hands and the doorway being opened. In this example, the functional aspects of the bathrooms design with regard to the mitigation of circulation problems is directly influenced by the spatial configuration of the non-physical artefactual extensions of the design. 
-
 TODO: fig:sink example.
 
+Artefactual extensions directly effect how well a design functions. For example, a sink in a bathroom has a functional space, the space a person occupies while washing his/her hands at the sink. If this space is interfered by (i.e., topologically overlapping) the functional and/or physical space of a doorway, this will cause a circulation problem when both the doorway and sink are simultaneously being operated, i.e., a collision between the person washing his/her hands and the doorway being opened. In this example, the functional aspects of the bathrooms design with regard to the mitigation of circulation problems is directly influenced by the spatial configuration of the non-physical artefactual extensions of the design. 
+
 \subsubsection{Spatial Abstraction for Qualitative Spatial Reasoning}
-The quantitative geometries of the architectural structures and their artefactual extensions are directly imported into the DSpace reasoner, via the DsSchema (more on this later). These quantitative geometries are the foundation of the multiple perceptive design representation. However, to reason about design on a conceptual and/or qualitative level, the design must be represented at a higher level of abstraction from the quantitative geometries. 
+In DSpace architectural entities have spatially abstracted representations. This allows DSpace to reason about the the design from a qualitative level of abstraction with regards to the its' spatial characteristics of topology, orientation and distance. This type of qualitative spatial reasoning, reasons over the abstract feature space of the design using abstract spatial structures of points, directed points, and convex hulls. 
 
-In DSpace architectural entities have spatially abstracted representations that allows DSpace to reason about the design a higher levels of abstraction. For example, DSpace uses qualitative spatial reasoning for orientation, topology, and distance constraints over the qualified spatial geometries of the design. The crux of this is that it bridges the gap between the quantified geometries and the functional / qualitative requirements of the design, thus allowing the reasoner to validate a high level requirement against its precise geometric representation. 
+Because the structural form of the design is represented as precise geometric quantities, it is impossible to reason qualitatively over them. Requires spatially abstracting the quantitative geometries into the qualitative spatial domain. The process of spatially abstracting the structural entities depends on not only the spatial characteristics of the structural form but also an interpretation of the intrinsic nature of an entity within an architectural / design context. For example, the abstraction of a doorway as a directed point is influenced by the interpretation of the intrinsic direction of the doorway. 
 
-The quantified geometries in DSpace are generally represented as polygons. However, the qualitative spatial reasoning in DSpace requires spatial abstractions of: point, directed point, and convex hull. These abstract representations emerge from spatial transformations on the quantitative geometries. The process of abstracting an architectural entity depends on an interpretation of the intrinsic spatial nature of the entity in the context of the building. For example, the representation of a doorway as a directed point depends on the interpretation of the intrinsic direction of the doorway as well as its' abstraction as a point. 
+The remainder of this section looks at the spatial abstraction of several architectural entities: walls, doorways, windows, columns, spaces, and interior design objects.  
 
-The remainder of this section focuses on the interpretation of the intrinsic spatial nature of specific architectural entities and how they are transformed from the quantitative geometries based on the interpretation. The following section on qualitative spatial reasoning will explain how these abstraction are used in the DSpace reasoner. 
-
-TODO: fig:spatial abstractions point dir point polygon 
+The on the interpretation of the intrinsic spatial nature of specific architectural entities and how they are transformed from the quantitative geometries based on the interpretation. The following section on qualitative spatial reasoning will explain how these abstraction are used in the DSpace reasoner. 
 
 \begin{table}[H]
   \begin{center}
@@ -298,7 +292,6 @@ TODO: fig:spatial abstractions point dir point polygon
   \end{center}
 \caption{Spatial Abstractions for Architectural Entities}
 \end{table} 
-
 
 \noindent \emph{\large Point} \\
 \indent The point abstraction for all architectural entities is the centroid of the quantitative polygon representation. In general, the centroid is a good point approximation of the object in terms of it's location in the design. An assumption made here is that architectural objects are rectangular in shape placing the centroid in a reasonable location within the polygon.  
