--- a/flanaganthesis.tex
+++ b/flanaganthesis.tex
@@ -233,9 +233,9 @@ In DSpace an architectural design is modeled in a multiple perspective structure
 
 TODO: fig:multiple perspective representation
 
-TODO: talk about representation in CLP framework
+Within the CLP framework of the DSpace reasoner, the multiple perspective model is represented as Prolog facts and rules. The representation structure is the basis for the spatial constraints of the DSpace reasoner.
 
-This section is structured as follows. The first subsection looks at the multiple perspective design structure of the DSpace reasoner. The second subsection looks at how each perspective is formally modeled (coded) in ins CLP framework of DSpace. The last section looks at how a real world design from a state-of-the-art architectural design tool is imported into the DSpace reasoner from the DsSchema and IFC format.
+This section is structured as follows. The first two subsection looks at the multiple perspective design structure of the DSpace reasoner and how each perspective is formally modeled in the DSpace CLP framework. The last section looks at how a real world design from a CAAD architectural design tool is imported into the DSpace reasoner using the DsSchema / IFC format.
 
 \subsection{Multiple Perspectives}
 In DSpace designs are represented in a multiple perspective structure that incorporate: (1) the physical geometries that pertain to the quantitative structures of the design, (2) the artefactual extensions that pertain to the functional aspects of the design, (3) and spatial abstractions that pertain to the design from a qualitative spatial perspective. The multiple perspective representation of DSpace allows reasoning about design requirements that go beyond purely quantitative geometric reasoning.
